fixed footer spacing

--- a/assets/css/_footer.scss
+++ b/assets/css/_footer.scss
@@ -1,7 +1,7 @@
 footer {
 	p{
 		margin: 0;
-		padding: $medium 0;
+		padding: 0;
 		text-align: center;
 	}
 }
