--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -927,7 +927,7 @@ footer {
 
 footer p {
   margin: 0;
-  padding: 1rem 0;
+  padding: 0;
   text-align: center;
 }
 
